--- a/Content/sass/Styles.sass
+++ b/Content/sass/Styles.sass
@@ -63,10 +63,9 @@ h1, h2, h3, h4, h5, h6,.h1, .h2, .h3, .h4, .h5, .h6
         max-width: unset
 .section
     padding: 0px 0px
-.main
+#main-body
     min-height: 300px
-    .main-raised
-        padding: 10px 0px
+    padding: 10px 0px    
 #carousel
     .carousel-inner
         .carousel-item
