--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,8 +1,6 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>About Us</h2>
-<hr />
 <div class="row">
     <div class="col-md-12">
         <h2>Welcome to Eyewear Store System</h2>
@@ -25,4 +23,15 @@
         </a>
     </div>
 </div>
+
+
+<section id="about w-100">
+    <div class="alert alert-primary">
+        <h2 class="titleX">
+            <a href="~/Home/Index" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>
+            About Us</h2>
+    </div>
+
+
+</section>
 
