--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -95,8 +95,8 @@
             </div>
     </div>
 
-
-    <div class="main main-raised @ViewBag.marginTop30 col-sm-11 col-md-10 col-lg-9 col-xl-8 ml-auto mr-auto" id="main-body">
+<!-- MAIN BODY -->
+    <div id="main-body" class="main main-raised @ViewBag.marginTop30 col-sm-11 col-md-10 col-lg-9 col-xl-8 ml-auto mr-auto">
         <!--Render Body-->
         <div class="container text-center">
             <div class="row">
