fixes + about + register

--- a/Content/css/Styles.css
+++ b/Content/css/Styles.css
@@ -16,19 +16,19 @@ a {
   position: relative; }
 
 .navbar .navbar-nav .nav-item .nav-link {
+  font-size: 18px;
   color: #9c27b0; }
   .navbar .navbar-nav .nav-item .nav-link:hover {
     color: #ca61dc; }
 
-.navbar .collapse.navbar-collapse .nav-link {
-  color: #9c27b0 !important; }
-  .navbar .collapse.navbar-collapse .nav-link:hover {
-    color: #ca61dc !important; }
+.navbar .navbar-nav .nav-item svg {
+  font-size: 28px;
+  margin-right: 6px; }
 
 .navbar.navbar-transparent .nav-item .nav-link {
-  color: #f4def8 !important; }
+  color: #fff; }
   .navbar.navbar-transparent .nav-item .nav-link:hover {
-    color: #d88be5 !important; }
+    color: #d88be5; }
 
 .navbar.navbar-transparent .navbar-brand img {
   height: 80px;
@@ -36,6 +36,11 @@ a {
   margin: 0;
   top: -20px;
   position: relative; }
+
+.navbar.navbar-transparent .collapse.link-colors .nav-item .nav-link {
+  color: #9c27b0 !important; }
+  .navbar.navbar-transparent .collapse.link-colors .nav-item .nav-link:hover {
+    color: #c34cd7 !important; }
 
 .alert {
   padding: 10px;
@@ -68,8 +73,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .section {
   padding: 0px 0px; }
 
+section {
+  width: 100%; }
+
 #main-body {
-  min-height: 300px;
+  min-height: 600px;
   padding: 10px 0px; }
 
 #carousel .carousel-inner .carousel-item img {
