--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,28 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<div class="row">
-    <div class="col-md-12">
-        <h2>Welcome to Eyewear Store System</h2>
-        </div>
-    <div class="col-md-offset-2 col-md-8">
-        <h4 style="text-align:justify">
-            
-            We aim to offer our customers a variety of the latest Glasses, Sunglasses and Contact Lens. We’ve come a long way, so we know exactly which direction to take when supplying you with high quality yet budget friendly products. We offer all of this while providing excellent customer service and friendly support.
- 
-            We always keep an eye on the latest trends in Eyewear products and put our customers’ wishes first. That is why we have satisfied customers all over the world, and are thrilled to be a part of the Eyewear industry.
-          
-            The interests of our customers are always the top priority for us, so we hope you will enjoy our products as much as we enjoy making them available to you.
-        </h4>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-offset-5 col-md-2">
-        <a href="Home" class="btn btn-default btn-block">
-            <span class="glyphicon glyphicon-arrow-left"></span> Back to Home Page
-        </a>
-    </div>
-</div>
+
 
 
 <section id="about w-100">
@@ -32,6 +11,32 @@
             About Us</h2>
     </div>
 
+    <div class="row">
+        <div class="col-md-8 mx-auto">
+            <h2>Welcome to Eyewear Store System!</h2>
+            
+            <p class="text-justify  py-3">                
+                We aim to offer our customers a variety of the latest Glasses, Sunglasses and Contact Lens. We’ve come a long way, so we know exactly which direction to take when supplying you with high quality yet budget friendly products. We offer all of this while providing excellent customer service and friendly support.            
+            </p>
 
+            <img class="col-12" src="/ESS/Images/logo2.png" alt="">
+
+            <h3 class="xx py-3">
+                Our strategy
+            </h3>
+
+            <p class="text-justify text-secondary  py-3">
+                We always keep an eye on the latest trends in Eyewear products and put our customers’ wishes first. That is why we have satisfied customers all over the world, and are thrilled to be a part of the Eyewear industry.
+            </p>
+
+            <h3 class="xx  py-3">
+                Our priority
+            </h3>
+
+            <p class="text-justify text-primary  py-3 pb-5">
+                The interests of our customers are always the top priority for us, so we hope you will enjoy our products as much as we enjoy making them available to you.                
+            </p>
+        </div>
+    </div>
 </section>
 
