--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -3,48 +3,64 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title</h2>
+<section id="register">
+    <div class="alert alert-primary">
+        <h2 class="titleX">
+            <a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>
+            Create account</h2>
+    </div>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account</h4>
-   <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label col-md-offset-2" })
-        <div class="col-md-4">
-            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="col-sm-12">
+                    <div class="">
+                        @Html.TextBoxFor(m => m.UserName, new { placeholder = "User name", @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="col-sm-12">
+                    <div class="">
+                        @Html.TextBoxFor(m => m.Email, new { placeholder = "Email", @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="col-sm-12">
+                    <div class="">
+                        @Html.TextBoxFor(m => m.PhoneNumber, new { placeholder = "Phone", @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="col-sm-12">
+                    <div class="">
+                        @Html.PasswordFor(m => m.Password, new { placeholder = "Password", @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                <div class="col-sm-12">
+                    <div class="">
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { placeholder = "Confirm password", @class = "form-control" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="row d-flex justify-content-between">
+                <input type="submit" value="Register" class="btn btn-primary col-9 mx-auto" />
+            </div>
         </div>
-    </div>
-    
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label col-md-offset-2" })
-        <div class="col-md-4">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label col-md-offset-2" })
-        <div class="col-md-4">
-            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control", placeholder = "05XXXXXXXX" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label col-md-offset-2" })
-        <div class="col-md-4">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label col-md-offset-2" })
-        <div class="col-md-4">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-5 col-md-2">
-            <input type="submit" class="btn btn-default btn-block" value="Register" />
-        </div>
-    </div>
-}
+    }
+        
+        
+</section>
