--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -45,7 +45,7 @@
     </div>
     
     <div class="container pb-5">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3736489.7218514383!2d90.21589792292741!3d23.857125486636733!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1506502314230" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d475324.73932617344!2d38.93095613097761!3d21.449889763688773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c3d01fb1137e59%3A0xe059579737b118db!2sJeddah+Saudi+Arabia!5e0!3m2!1sen!2sno!4v1523815936002" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <hr>
 
@@ -55,7 +55,7 @@
     {
         @Html.AntiForgeryToken()
 
-        <div class="col-8 mx-auto pb-5 d-flex flex-column">
+        <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">
             <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="row">
