--- a/Content/css/Styles.css
+++ b/Content/css/Styles.css
@@ -5,6 +5,9 @@ a {
   -o-transition: all 350ms ease-out;
   transition: all 350ms ease-out; }
 
+.form-check .form-check-input:checked + .form-check-sign .check {
+  background: #9c27b0; }
+
 .navbar.fixed-top {
   opacity: .9; }
 
@@ -16,14 +19,14 @@ a {
   position: relative; }
 
 .navbar .navbar-nav .nav-item .nav-link {
-  font-size: 18px;
+  font-size: 16px;
   color: #9c27b0; }
   .navbar .navbar-nav .nav-item .nav-link:hover {
     color: #ca61dc; }
 
 .navbar .navbar-nav .nav-item svg {
-  font-size: 28px;
-  margin-right: 6px; }
+  font-size: 26px;
+  margin-right: 4px; }
 
 .navbar.navbar-transparent .nav-item .nav-link {
   color: #fff; }
@@ -74,7 +77,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   padding: 0px 0px; }
 
 section {
-  width: 100%; }
+  width: 100% !important; }
 
 #main-body {
   min-height: 600px;
@@ -94,3 +97,7 @@ section {
   width: 100%; }
   #contact form {
     width: 100%; }
+
+#login .section {
+  height: 75vh;
+  background-size: 100% 100%; }
