--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -64,7 +64,7 @@
                         </a>
                     </li>                    
                     <li class="nav-item">
-                        <a class="nav-link" href="~/AddToCart/MyOrder" onclick="scrollToDownload()">
+                        <a class="nav-link" href="~/Cart/MyCart" onclick="scrollToDownload()">
                             <i class="fas fa-shopping-cart"></i>
                         </a>
                     </li>
