buy button in item details page fix

--- a/Views/Items/Details.cshtml
+++ b/Views/Items/Details.cshtml
@@ -177,7 +177,7 @@
 
             <div class="row d-flex justify-content-between">
                 <a href="~/Items" class="btn btn-default">Back to Items List</a>
-                <a href="~/Buy/@Model.Id" class="btn btn-primary pull-right">Buy / Add to Cart</a>
+                <a href="~/Home/Buy/@Model.Id" class="btn btn-primary pull-right">Buy / Add to Cart</a>
             </div>
         </div>
     </div>
