--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -12,7 +12,26 @@
             Contact Us</h2>
     </div>
 
-    @if ((string)ViewBag.Result == "Sent")
+    
+	
+
+    <div class="jumbotron jumbotron-fluid py-5">
+        <div class="container">
+            <h1 class="display-4">Please feel free to have contact with us whenever you have a question</h1>
+            @*<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>*@
+            <ul class="text-left col-md-8 mx-auto pt-5">
+                <li><strong>Yusuf Arbasha (leader): </strong> Phone: +963 333 444 555</li>
+                <li><strong>Muhannad Senan (CEO): </strong> Phone: +963 333 444 555</li>
+                <li><strong>Address: </strong> Saudi Arabia, Madinah</li>
+            </ul>
+        </div>
+    </div>
+    
+    <div class="container pb-5">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d475324.73932617344!2d38.93095613097761!3d21.449889763688773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c3d01fb1137e59%3A0xe059579737b118db!2sJeddah+Saudi+Arabia!5e0!3m2!1sen!2sno!4v1523815936002" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    <hr>
+	@if ((string)ViewBag.Result == "Sent")
     {
         <div class="alert alert-success">
             <span class="glyphicon glyphicon-ok"></span>
@@ -31,27 +50,10 @@
             </span>
         </div>
     }
+	else{
+		<h3 class="title">Send us a message:</h3>
 
-    <div class="jumbotron jumbotron-fluid py-5">
-        <div class="container">
-            <h1 class="display-4">Please feel free to have contact with us whenever you have a question</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-            <ul class="text-left col-md-8 mx-auto pt-5">
-                <li><strong>Yusuf Arbasha (leader): </strong> Phone: +963 333 444 555</li>
-                <li><strong>Muhannad Senan (CEO): </strong> Phone: +963 333 444 555</li>
-                <li><strong>Address: </strong> Saudi Arabia, Jiddah</li>
-            </ul>
-        </div>
-    </div>
-    
-    <div class="container pb-5">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d475324.73932617344!2d38.93095613097761!3d21.449889763688773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c3d01fb1137e59%3A0xe059579737b118db!2sJeddah+Saudi+Arabia!5e0!3m2!1sen!2sno!4v1523815936002" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <hr>
-
-    <h3 class="title">Send us a message:</h3>
-
-    @using (Html.BeginForm())
+    using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
@@ -99,5 +101,7 @@
 
         </div>
     }   
+	}
+    
 
 </section>
